# js2x

./: .gitignore  Makefile  pyproject.toml
debian/: README.source  changelog  control
js2x/: __init__.py  cmdline.py  json2xml.py
js2x/xsl/: xml2json.xsl
json2xml/: cmdline.py  json2xml.py
json2xml/xsl/: xml2json.xsl
tests/: test_json2xml.py  test_xml2json.py
tests/examples/json/: j10.json  j11.json  j12.json  j13.json  j14.json  j15.json  j16.json  j17.json  j18.json  j19.json  j3.json  j4.json  j5.json  j6.json
tests/examples/xml/: x2.xml  x3.xml  x4.xml  y3.xml  y4.xml
