[project]
name = "json2xml"
authors = [
  { name="Johannes Willkomm", email="jwillkomm@ai-and-it.de" },
]
description = "Simple Binary Stream Messages"
# readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["lxml"]
dynamic = ["version"]

[project.optional-dependencies]
build = ["build"]
test = ["pytest", "tox"]
all = ["build", "pytest", "tox"]

[project.urls]
"Homepage" = "https://github.com/aiandit/json2xml"
"Bug Tracker" = "https://github.com/aiandit/json2xml/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
json2xml = "json2xml.cmdline:json2xmlrun"
xml2json = "json2xml.cmdline:xml2jsonrun"

[tool.hatch.version]
path = "json2xml/__init__.py"

#[tool.hatch.build.targets.sdist.hooks.custom]
#path="plugin.py"
