[project]
name = "js2x"
authors = [
  { name="Johannes Willkomm", email="jwillkomm@ai-and-it.de" },
]
description = "Simple JSON to XML transform and back. Transform XML to plain JSON, such that /a/b is found in the JSON as d['a']['b']."
# readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["lxml"]
dynamic = ["version"]

[project.optional-dependencies]
build = ["build"]
test = ["pytest", "tox"]
all = ["build", "pytest", "tox"]

[project.urls]
"Homepage" = "https://github.com/aiandit/js2x"
"Bug Tracker" = "https://github.com/aiandit/js2x/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
js2x = "js2x.cmdline:json2xmlrun"
x2js = "js2x.cmdline:xml2jsonrun"

[tool.hatch.version]
path = "js2x/__init__.py"

#[tool.hatch.build.targets.sdist.hooks.custom]
#path="plugin.py"
